# repoC

./: README.md  pyproject.toml  requirements-dev.txt
src/log_parser_richard/: __init__.py  __main__.py  csv_writer.py  log_line.py  log_parser.py  parse_line.py
tests/: test_csv_writer.py  test_log_line.py  test_log_parser.py  test_parse_line.py
