[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log_parser_richard"
version = "0.0.1"
authors = [
    { name="Richard Lowbrink", email="richard.lowbrink@sylog.se" },
]
requires="csv_writer"

description = "A log parser for doxygen warning logs"
readme = "README.md"
requires-python = ">=3.10.6"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src/log_parser_richard"
