[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log_parser_richard"
version = "0.0.1"
authors = [
    { name="Richard Lowbrink", email="richard.lowbrink@sylog.se" },
]
description = "A log parser for doxygen warning logs"
readme = "README.md"
requires-python = ">=3.10.6"
pythonpath = "src/log_parser_richard"

[project.optional-dependencies]
test = [
    "mock~=4.0.3",
    "flake8~=3.8.4",
    "pylint~=2.6.0"
]
